se ajusto la navegacion al momento de pasar de un item a su detalle. pendiente: se queda pendiente al momento de bindear los datos de la vista de detalle.

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -15,3 +15,10 @@ message.info.table=Datos son referenciales.
 
 button.action.create=Registrar nuevo producto
 button.action.alert=Alerta
+
+back.to.home=Volver a la pagina principal
+
+Principal.viewTitle=Gestor de Inventario
+Detalle.viewTitle=Detalle de articulo
+
+Principal.SearchTooltip.text=Buscar
