se ajusto funcionalidad de filtros, texto de la tabla, realiza la navegacion al detalle y muestra contenido de manera correcta pendiente: bindear datos y textos

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -22,3 +22,7 @@ Principal.viewTitle=Gestor de Inventario
 Detalle.viewTitle=Detalle de articulo
 
 Principal.SearchTooltip.text=Buscar
+
+Principal.icontabbar.title=Productos
+
+Principal.table.no.data= Sin datos
