se agregaron valores al json local, se bindearon dichos valores de manera correcta
pendiente: agregar textos al segundo panel y funcionalidad al boton de agregar

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -26,3 +26,8 @@ Principal.SearchTooltip.text=Buscar
 Principal.icontabbar.title=Productos
 
 Principal.table.no.data= Sin datos
+
+Detalle.Panel.1.lable.1=ID del Producto
+Detalle.Panel.1.lable.2=Precio del producto
+Detalle.Panel.1.lable.3=Descontinuado
+Detalle.Panel.1.lable.4=Stock
