se agregaron textos i18n y bindeo de datos. nota: estos datos dependen del item que se dio clic falta imagen pendiente funcionalidad de boton agregar

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -27,7 +27,15 @@ Principal.icontabbar.title=Productos
 
 Principal.table.no.data= Sin datos
 
-Detalle.Panel.1.lable.1=ID del Producto
-Detalle.Panel.1.lable.2=Precio del producto
-Detalle.Panel.1.lable.3=Descontinuado
-Detalle.Panel.1.lable.4=Stock
+Detalle.Panel.1.label.1=ID del Producto
+Detalle.Panel.1.label.2=Precio del producto
+Detalle.Panel.1.label.3=Descontinuado
+
+Detalle.Panel.2.title=Información del producto
+
+Detalle.Panel.2.label.1=descripción de producto
+Detalle.Panel.2.label.2=proveedor
+Detalle.Panel.2.label.3=dimensiones
+Detalle.Panel.2.label.4=distribución
+
+Detalle.Panel.3.title=Información de codigo de barras
