se agrego panel para mostrar el codigo de barra en el detalle y el scaner de codigo de barr en la pagina principal

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -15,6 +15,7 @@ message.info.table=Datos son referenciales.
 
 button.action.create=Registrar nuevo producto
 button.action.alert=Alerta
+button.action.imprimir=Imprimir
 
 back.to.home=Volver a la pagina principal
 
@@ -39,3 +40,5 @@ Detalle.Panel.2.label.3=dimensiones
 Detalle.Panel.2.label.4=distribución
 
 Detalle.Panel.3.title=Información de codigo de barras
+
+Detalle.Panel.3.label.1=Codigo generado con la Información del producto
