--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -42,3 +42,5 @@ Detalle.Panel.2.label.4=distribución
 Detalle.Panel.3.title=Información de codigo de barras
 
 Detalle.Panel.3.label.1=Codigo generado con la Información del producto
+
+Principal.Dialog.1.nuevo.producto=Registro de Producto
