--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -44,3 +44,10 @@ Detalle.Panel.3.title=Información de codigo de barras
 Detalle.Panel.3.label.1=Codigo generado con la Información del producto
 
 Principal.Dialog.1.nuevo.producto=Registro de Producto
+
+Message.Error.TextInfo1.Text=Error de comunicación, vuelva a intentarlo más tarde.
+Messagedialog.title1=Mensaje de aplicación
+
+NotFound=Página No Encontrada
+NotFound.text=Lo sentimos, pero el recurso solicitado no está disponible.
+NotFound.description=Lo sentimos, pero el recurso no está disponible.
