se recono las etiquetas en el fragmento, se agregaron etiquetas.

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -45,6 +45,20 @@ Detalle.Panel.3.label.1=Codigo generado con la Información del producto
 
 Principal.Dialog.1.nuevo.producto=Registro de Producto
 
+Principal.Dialog.1.seccion.1.title=Datos del Producto
+
+Principal.Dialog.1.seccion.1.label.1=Código de Inventario
+Principal.Dialog.1.seccion.1.label.1.placeholder=ingresar código inventario
+Principal.Dialog.1.seccion.1.label.2=Estado
+Principal.Dialog.1.seccion.1.label.2..placeholder=Ingresar estado
+Principal.Dialog.1.seccion.1.label.3=Proveedor
+Principal.Dialog.1.seccion.1.label.3.placeholder=Ingresar proveedor
+Principal.Dialog.1.seccion.1.label.4=Empleado
+Principal.Dialog.1.seccion.1.label.5=Equipo
+
+Principal.Dialog.1.seccion.1.button.1=Registrar
+Principal.Dialog.1.seccion.1.button.2=Cancelar
+
 Message.Error.TextInfo1.Text=Error de comunicación, vuelva a intentarlo más tarde.
 Messagedialog.title1=Mensaje de aplicación
 
